Polishing some things

--- a/client/src/app/auth/login/login.component.html
+++ b/client/src/app/auth/login/login.component.html
@@ -48,9 +48,10 @@
       <p>OR</p>
     </div>
     <div class="social-logins">
-      <div class="social-login-google">
-        <button>Continue With Google</button>
-      </div>
+        <!-- google auth button -->
+      <app-google-auth-button>
+          
+      </app-google-auth-button>
     </div>
   </div>
 </div>
