--- a/client/src/app/auth/register/register.component.css
+++ b/client/src/app/auth/register/register.component.css
@@ -19,6 +19,11 @@ body {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
+*{
+    box-sizing: border-box;
+}
+
+
 .rf-logo h1 {
   color: #04CDD4;
   font-size: 2.5rem;
