adding router links

--- a/client/src/app/auth/login/login.component.html
+++ b/client/src/app/auth/login/login.component.html
@@ -41,8 +41,8 @@
     </form>
 
     <div class="links">
-      <a href="#" class="forgot-password">I Forgot Password</a>
-      <a href="#" class="create-account">Create Account</a>
+      <a routerLink="/send-reset-code" class="forgot-password">I Forgot Password</a>
+      <a routerLink="/register" class="create-account">Create Account</a>
     </div>
     <div class="or">
       <p>OR</p>
