--- a/client/src/app/auth/register/register.component.html
+++ b/client/src/app/auth/register/register.component.html
@@ -46,7 +46,7 @@
 
     <!-- Additional Links and Social Logins -->
     <div class="links">
-      <a href="#" class="have-account">I Already Have A Account</a>
+      <a routerLink="/login" class="have-account">I Already Have A Account</a>
     </div>
     <div class="or">
       <p>OR</p>
