--- a/client/src/app/auth/login/login.component.html
+++ b/client/src/app/auth/login/login.component.html
@@ -41,7 +41,7 @@
     </form>
 
     <div class="links">
-      <a routerLink="/send-reset-code" class="forgot-password">I Forgot Password</a>
+      <a routerLink="/send-reset-password" class="forgot-password">I Forgot Password</a>
       <a routerLink="/register" class="create-account">Create Account</a>
     </div>
     <div class="or">
