--- a/client/src/app/layout/admin-aside/admin-aside.component.html
+++ b/client/src/app/layout/admin-aside/admin-aside.component.html
@@ -12,7 +12,7 @@
       </li>
       <li>
         <i class="fa fa-box"></i>
-        <span><a routerLink="/admin/products" href="Products">Products</a></span>
+        <span><a routerLink="/admin/products">Products</a></span>
       </li>
       <li>
         <i class="fa fa-users"></i>
