--- a/client/src/app/layout/aside/aside.component.html
+++ b/client/src/app/layout/aside/aside.component.html
@@ -57,7 +57,7 @@
         </li>
         <li class="admin-li">
           <i class="fa fa-users-cog"></i>
-          <span><a routerLink="/admin" href="Admin">Admin</a></span>
+          <span><a routerLink="/admin">Admin</a></span>
         </li>
       </ul>
     </nav>
