--- a/client/src/app/auth/send-reset-password/send-reset-password.component.css
+++ b/client/src/app/auth/send-reset-password/send-reset-password.component.css
@@ -11,10 +11,11 @@ body {
 .container {
   display: flex; 
   justify-content: center;
-  align-items: center; 
+  align-items: center;
   width: 100%;
   max-width: 400px;
   padding: 20px;
+  height: 100%; 
 }
 
 .form {
@@ -22,6 +23,7 @@ body {
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+  width: 100%; 
 }
 
 .form h2 {
