--- a/client/src/app/auth/send-reset-password/send-reset-password.component.css
+++ b/client/src/app/auth/send-reset-password/send-reset-password.component.css
@@ -3,9 +3,14 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh; 
+  width: 100%;
   font-family: Arial, sans-serif;
   background: #f0f0f5;
   margin: 0; 
+}
+
+*{
+    box-sizing: border-box;
 }
 
 .container {
