--- a/client/src/app/auth/send-reset-password/send-reset-password.component.css
+++ b/client/src/app/auth/send-reset-password/send-reset-password.component.css
@@ -13,7 +13,7 @@ body {
     box-sizing: border-box;
 }
 
-.container {
+/* .container {
   display: flex; 
   justify-content: center;
   align-items: center;
@@ -21,7 +21,7 @@ body {
   max-width: 400px;
   padding: 20px;
   height: 100%; 
-}
+} */
 
 .form {
   background: #ffffff;
