--- a/client/src/app/auth/send-reset-password/send-reset-password.component.css
+++ b/client/src/app/auth/send-reset-password/send-reset-password.component.css
@@ -6,29 +6,24 @@ body {
   width: 100%;
   font-family: Arial, sans-serif;
   background: #f0f0f5;
-  margin: 0; 
+  margin: 0;
 }
 
-*{
-    box-sizing: border-box;
-}
-
-/* .container {
-  display: flex; 
+.container {
+  display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  max-width: 400px;
+  max-width: 500px; 
   padding: 20px;
-  height: 100%; 
-} */
+}
 
 .form {
   background: #ffffff;
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
-  width: 100%; 
+  width: 100%;
 }
 
 .form h2 {
