--- a/client/src/app/auth/send-reset-password/send-reset-password.component.css
+++ b/client/src/app/auth/send-reset-password/send-reset-password.component.css
@@ -3,10 +3,9 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh; 
-  width: 100%;
-  font-family: Arial, sans-serif;
-  background: #f0f0f5;
   margin: 0;
+  background: #f0f0f5;
+  font-family: Arial, sans-serif;
 }
 
 .container {
@@ -14,6 +13,7 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
+  height: 100%;  
   max-width: 500px; 
   padding: 20px;
 }
@@ -24,6 +24,7 @@ body {
   padding: 20px;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
   width: 100%;
+  max-width: 400px;  
 }
 
 .form h2 {
