--- a/client/src/app/auth/send-reset-password/send-reset-password.component.css
+++ b/client/src/app/auth/send-reset-password/send-reset-password.component.css
@@ -6,6 +6,7 @@ body {
   margin: 0;
   background: #f0f0f5;
   font-family: Arial, sans-serif;
+  border: 10px solid red;
 }
 
 .container {
@@ -16,6 +17,7 @@ body {
   height: 100%;  
   max-width: 500px; 
   padding: 20px;
+  border: 5px solid blue;
 }
 
 .form {
@@ -25,6 +27,7 @@ body {
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
   width: 100%;
   max-width: 400px;  
+  border: 3px solid yellow;
 }
 
 .form h2 {
