--- a/client/src/app/auth/send-reset-password/send-reset-password.component.css
+++ b/client/src/app/auth/send-reset-password/send-reset-password.component.css
@@ -9,12 +9,16 @@ body {
   border: 10px solid red;
 }
 
+*{
+    box-sizing: border-box;
+}
+
 .container {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;  
+  height: 100vh;  
   max-width: 500px; 
   padding: 20px;
   border: 5px solid blue;
