--- a/client/src/app/auth/send-reset-password/send-reset-password.component.css
+++ b/client/src/app/auth/send-reset-password/send-reset-password.component.css
@@ -2,6 +2,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
   height: 100vh; 
   margin: 0;
   background: #f0f0f5;
