--- a/client/src/app/auth/reset-password/reset-password.component.css
+++ b/client/src/app/auth/reset-password/reset-password.component.css
@@ -5,7 +5,6 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  font-family: Arial, sans-serif;
   background: #f0f0f5;
 }
 
@@ -13,6 +12,7 @@ body {
   width: 100%;
   max-width: 400px;
   padding: 20px;
+  border: 5px solid blue;
 }
 
 .form {
@@ -20,6 +20,7 @@ body {
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+  border: 3px solid yellow;
 }
 
 .form h2 {
