--- a/client/src/app/auth/reset-password/reset-password.component.css
+++ b/client/src/app/auth/reset-password/reset-password.component.css
@@ -5,6 +5,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  width: 100%;
   background: #f0f0f5;
 }
 
@@ -13,6 +14,8 @@ body {
   max-width: 400px;
   padding: 20px;
   border: 5px solid blue;
+  height: 100vh;
+ 
 }
 
 .form {
