--- a/client/src/app/auth/reset-password/reset-password.component.css
+++ b/client/src/app/auth/reset-password/reset-password.component.css
@@ -1,5 +1,3 @@
-
-
 body {
   display: flex;
   justify-content: center;
@@ -7,15 +5,23 @@ body {
   height: 100vh;
   width: 100%;
   background: #f0f0f5;
+  margin: 0;
+  padding: 0;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 .container {
+  display: flex; 
+  justify-content: center;
+  align-items: center;
   width: 100%;
-  max-width: 400px;
+  max-width: 400px; 
   padding: 20px;
   border: 5px solid blue;
-  height: 100vh;
- 
+  height: 100%; 
 }
 
 .form {
@@ -24,6 +30,7 @@ body {
   padding: 20px;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
   border: 3px solid yellow;
+  width: 100%; 
 }
 
 .form h2 {
