--- a/client/src/app/auth/reset-password/reset-password.component.css
+++ b/client/src/app/auth/reset-password/reset-password.component.css
@@ -1,12 +1,15 @@
+
+html, body {
+  height: 100%; 
+  margin: 0;
+  padding: 0;
+}
+
 body {
   display: flex;
   justify-content: center;
-  align-items: center;
-  height: 100vh;
-  width: 100%;
+  align-items: center; 
   background: #f0f0f5;
-  margin: 0;
-  padding: 0;
 }
 
 * {
@@ -14,14 +17,13 @@ body {
 }
 
 .container {
-  display: flex; 
-  justify-content: center;
+  display: flex;
+  justify-content: center; 
   align-items: center;
-  width: 100%;
-  max-width: 400px; 
+  width: 100%;          
+  height: 100vh;             
   padding: 20px;
-  border: 5px solid blue;
-  height: 100%; 
+  border: 5px solid blue;   
 }
 
 .form {
@@ -29,8 +31,9 @@ body {
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
-  border: 3px solid yellow;
-  width: 100%; 
+  width: 100%;             /* Esto hace que el formulario ocupe todo el ancho disponible */
+  max-width: 400px;        /* Limita el ancho máximo del formulario */
+  border: 3px solid yellow; /* Para que veas el borde amarillo */
 }
 
 .form h2 {
