--- a/client/src/app/auth/reset-password/reset-password.component.css
+++ b/client/src/app/auth/reset-password/reset-password.component.css
@@ -23,7 +23,6 @@ body {
   width: 100%;          
   height: 100vh;             
   padding: 20px;
-  border: 5px solid blue;   
 }
 
 .form {
@@ -31,9 +30,8 @@ body {
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
-  width: 100%;             /* Esto hace que el formulario ocupe todo el ancho disponible */
-  max-width: 400px;        /* Limita el ancho máximo del formulario */
-  border: 3px solid yellow; /* Para que veas el borde amarillo */
+  width: 100%;            
+  max-width: 400px;       
 }
 
 .form h2 {
