--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="header">
-     <app-header></app-header>
+     <app-header [showSearch]="false"></app-header>
   </div>
   <div class="aside">
      <app-admin-aside></app-admin-aside>
