--- a/client/src/app/layout/header/header.component.html
+++ b/client/src/app/layout/header/header.component.html
@@ -34,7 +34,7 @@
   </div>
 </header>
 
-<div [ngIf]="!showSearch" class="rs-sub-header">
+<div class="rs-sub-header">
   <div class="rs-sub-search">
     <input type="search" placeholder="Search Products...">
     <i class="fa fa-search"></i>
