--- a/client/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/client/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,1 +1,14 @@
-<p>admin-dashboard works!</p>
+<main>
+    <!-- this will be componetized soon -->
+    <div class="dashboard">
+     <div class="chart-wrapper"> 
+      <div class="chart">
+        
+      <div id="salesChart" style="width: 100%; height: 400px;">
+        
+      </div>
+        
+      </div>
+     </div>
+    </div>
+  </main>
