--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -11,6 +11,7 @@
     padding: 0;
     margin: 0;
     font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
 }
 
 /* Red color for validation errors */
