--- a/client/src/app/admin/add-product-variant/add-product-variant.component.html
+++ b/client/src/app/admin/add-product-variant/add-product-variant.component.html
@@ -39,7 +39,10 @@
         
         
         <div class="publish-btn">
-
+            <!-- Submit Button -->
+          <app-product-variant-submit-button>
+              
+          </app-product-variant-submit-button>
         </div>
       </form>
     </div>
