--- a/client/src/app/admin/add-product-variant/add-product-variant.component.html
+++ b/client/src/app/admin/add-product-variant/add-product-variant.component.html
@@ -40,7 +40,9 @@
         
         <div class="publish-btn">
             <!-- Submit Button -->
-          <app-product-variant-submit-button>
+          <app-product-variant-submit-button
+          [form]="variantForm"
+          >
               
           </app-product-variant-submit-button>
         </div>
