adding placeholder images

--- a/client/src/app/product-details/product-details-images/product-details-images.component.html
+++ b/client/src/app/product-details/product-details-images/product-details-images.component.html
@@ -3,12 +3,14 @@
       <div class="slider-action-left">
         <i class="fa fa-arrow-left"></i>
       </div>
-      <img>
+      <img src="/assets/images/istockphoto-579156228-1024x1024.jpg">
        <div class="slider-action-right">
         <i class="fa fa-arrow-right"></i>
       </div>
     </div> 
     <div class="children-images">
-    
+       <div class="image">
+        <img src="/assets/images/istockphoto-579156228-1024x1024.jpg">
+       </div>
     </div>
 </div> 
