more placeholder imahes

--- a/client/src/app/product-details/create-product-opinion/create-product-opinion.component.html
+++ b/client/src/app/product-details/create-product-opinion/create-product-opinion.component.html
@@ -1,6 +1,6 @@
 <div class="add-opinion">
     <div>
-        <img src="Screenshot_20240928-011835.png">
+        <img src="/assets/images/istockphoto-579156228-1024x1024.jpg">
     </div>
     <div class="add-opinion-inp">
       <input type="text" placeholder="Add Your Opinion">
