--- a/client/src/app/product-details/product-details-images/product-details-images.component.html
+++ b/client/src/app/product-details/product-details-images/product-details-images.component.html
@@ -12,5 +12,17 @@
        <div class="image">
         <img src="/assets/images/istockphoto-579156228-1024x1024.jpg">
        </div>
+       <div class="image">
+        <img src="/assets/images/istockphoto-579156228-1024x1024.jpg">
+       </div>
+       <div class="image">
+        <img src="/assets/images/istockphoto-579156228-1024x1024.jpg">
+       </div>
+       <div class="image">
+        <img src="/assets/images/istockphoto-579156228-1024x1024.jpg">
+       </div>
+       <div class="image">
+        <img src="/assets/images/istockphoto-579156228-1024x1024.jpg">
+       </div>
     </div>
 </div> 
