--- a/client/src/app/product-details/product-opinion/product-opinion.component.html
+++ b/client/src/app/product-details/product-opinion/product-opinion.component.html
@@ -1,6 +1,6 @@
 <div class="opinion"> 
     <div class="o-user">
-      <img src="Screenshot_20240928-011835.png" alt="Screenshot_20240928-011835.png">
+      <img src="/assets/images/istockphoto-579156228-1024x1024.jpg" alt="Screenshot_20240928-011835.png">
       <p class="username">Arnold Schwarztmann</p>
     </div>
     <div class="o-data">
