--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -1,26 +1,14 @@
 <div class="container">
-  <div class="header">
+ 
+ <!-- <div class="header">
      <app-header></app-header>
   </div>
   <div class="aside">
      <app-admin-aside></app-admin-aside>
-  </div>
+  </div> --> 
+
+
   <div class="main">
-
-  <!-- I dont have to use this components on al the admin's pages, we are using ngrx to handle it all on the admin-page.component.ts
-    <app-loading-component *ngIf="loading$ | async" class="loading-spinner">
-   </app-loading-component>
-
-   <app-error-component *ngIf="error$ | async as errorMessage" [message]="errorMessage" class="error-message">
-   </app-error-component>
-
-    <app-success-component *ngIf="success$ | async as successMessage" [message]="successMessage" class="success-message">
-    </app-success-component> -->
-
     <router-outlet></router-outlet>
-    <!-- (activate)="onActivate($event) -->
-  </div>
-  <div class="footer">
-    <!-- I will make the footer Component, but not now -->
   </div>
 </div>
