displaying product data

--- a/client/src/app/product-details/product-details-data/product-details-data.component.html
+++ b/client/src/app/product-details/product-details-data/product-details-data.component.html
@@ -1,7 +1,7 @@
-<p class="p-title">iPhone 15 Pro Max</p>
+<p class="p-title">{{ product.title }}</p>
 <div class="p-description">
   <p>
-    Get ready to be blown away by the iPhone 15 Pro Max, the tech gem that makes you wonder how you’ve survived this long without such perfection in your hands. With its Super Retina XDR display, which could literally light up an entire neighborhood, and the A17 Pro chip that’s faster than your ex replying to messages, this device is a masterpiece of engineering.
+    {{ product.description }}
   </p>
 </div>
 <div class="p-buy">
