--- a/client/src/app/product-details/product-details.component.html
+++ b/client/src/app/product-details/product-details.component.html
@@ -6,7 +6,7 @@
             <app-product-details-images></app-product-details-images>
             <div class="main-product-details">
                 <!-- The product data like title, description and buttons to buy and choose attributes -->
-                <app-product-details-data></app-product-details-data>
+                <app-product-details-data [product]="product"></app-product-details-data>
             </div> 
         </div> 
     </div> 
