--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -1,12 +1,11 @@
 <div class="container">
  
- <!-- <div class="header">
+  <div class="header">
      <app-header></app-header>
   </div>
   <div class="aside">
      <app-admin-aside></app-admin-aside>
-  </div> --> 
-
+  </div> 
 
   <div class="main">
     <router-outlet></router-outlet>
