--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 
-<div class="container">
+<!-- <div class="container">
      <div class="header">
         <app-header></app-header>
      </div>
@@ -7,9 +7,11 @@
         <app-aside></app-aside>
     </div>
     <div class="main">
-      <app-home-main></app-home-main>
+
     </div>
     <div class="footer">
 
     </div>
-</div>
+</div> --> 
+
+      <app-home-main></app-home-main>
