--- a/client/src/app/layout-component/layout-component.component.html
+++ b/client/src/app/layout-component/layout-component.component.html
@@ -4,7 +4,7 @@
     <app-header></app-header>
  </div>
  <div class="aside">
-    <app-admin-aside></app-admin-aside>
+    <app-aside></app-aside>
  </div>
  <div class="main">
     <router-outlet></router-outlet>
