--- a/client/src/app/product-details/product-details-images/product-details-images.component.html
+++ b/client/src/app/product-details/product-details-images/product-details-images.component.html
@@ -3,14 +3,14 @@
         <div (click)="decrementImage()" class="slider-action-left">
             <i class="fa fa-arrow-left"></i>
         </div>
-        <img [src]="(product$ | async)?.images[imageIndex] || '/assets/images/istockphoto-579156228-1024x1024.jpg'">
+        <img [src]="(product$ | async)?.pictures?.[imageIndex] || '/assets/images/istockphoto-579156228-1024x1024.jpg'">
         <div (click)="incrementImage()" class="slider-action-right">
             <i class="fa fa-arrow-right"></i>
         </div>
     </div> 
     <div class="children-images">
         <div 
-        *ngFor="let image of (product$ | async)?.images; let i = index;" 
+        *ngFor="let image of (product$ | async)?.pictures; let i = index;" 
         class="image"
         (click)="changeImage(i)">
             <img [src]="image || '/assets/images/istockphoto-579156228-1024x1024.jpg'">
