--- a/client/src/app/product-details/product-details-data/product-details-data-attributes/product-details-data-attributes.component.html
+++ b/client/src/app/product-details/product-details-data/product-details-data-attributes/product-details-data-attributes.component.html
@@ -3,7 +3,7 @@
     <div *ngFor="let attribute of product.category.attributes" class="p-buy-option">
       <label>{{ attribute.name }}</label>
       <select (change)="onOptionChange($event, attribute.name)">
-        <option *ngFor="let option of attribute.options" [value]="option">
+        <option *ngFor="let option of attribute.options" [value]="option.id">
           {{ option.value }}
         </option>
       </select>
